<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="91dp"
        android:background="@color/colorAccent"
        android:onClick="logOut"
        android:text="@string/logout" />

    <Button
        android:id="@+id/set_emergency_number"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="620dp"
        android:background="@drawable/background_blue"
        android:fontFamily="serif"
        android:textColor="@color/cardview_light_background"
        android:onClick="setEmergencyContact"
        android:text="Set Emergency Contact" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        app:srcCompat="@drawable/logo"
        />

    <ImageView
        android:id="@+id/condition"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="220dp"
        app:srcCompat="@drawable/condition"
       />

    <ImageView
        android:id="@+id/emergency"
        android:layout_width="170dp"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="430dp"
        app:srcCompat="@drawable/emergency"
      />

    <ImageView
        android:id="@+id/menus"
        android:layout_width="170dp"
        android:layout_height="160dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="430dp"
        app:srcCompat="@drawable/menu"
      />

    <ImageView
        android:id="@+id/pills"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="230dp"
        app:srcCompat="@drawable/pills"
        />

    <TextView
        android:id="@+id/healthCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="390dp"
        android:text="@string/health_condition" />

    <TextView
        android:id="@+id/PillSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="390dp"
        android:text="@string/pill_schedule" />

    <TextView
        android:id="@+id/foodMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="590dp"
        android:text="@string/food_menu" />

    <TextView
        android:id="@+id/emergencyCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="590dp"
        android:text="@string/emergency_call" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/welcome_guest"
        android:textSize="30sp" />


</RelativeLayout>